Fixing Size of title vhp self check-in on iphonex

--- a/src/css/custom/_pages.scss
+++ b/src/css/custom/_pages.scss
@@ -39,4 +39,7 @@ body {
     font-weight: bold;
     font-size: 20px;
   }
+  .mci-size {
+    font-size: 14px;
+  }
 }
